# cornerstone

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  raft_server_example.cxx
include/: cluster_config.hxx  pp_util.hxx  ptr.hxx  raft_server.hxx
src/: asio_service.cxx  cluster_config.cxx  raft_server.cxx
tests/: CMakeLists.txt
